# pf_ndk

./: Cargo.toml
pf_ndk_examples/: Cargo.toml
pf_ndk_examples/examples/: hello.rs
pf_ndk_examples/src/: lib.rs
pf_ndk_glue/: Cargo.toml
pf_ndk_glue/src/: app.rs  lib.rs
pf_ndk_macro/: Cargo.toml
pf_ndk_macro/src/: lib.rs
