[package]
name = "pf_ndk_glue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger = { version = "0.10.1" }
pf_ndk_macro={path="../pf_ndk_macro"}
log = "0.4.14"
ndk-sys="0.2.2"
libc = "0.2.84"
