[package]
name = "pf_ndk_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = { version = "1.0.60", features = ["full"] }
quote = "1.0.8"
android_logger = { version = "0.10.1" }
log = "0.4.14"


